--- a/index.html
+++ b/index.html
@@ -12,8 +12,25 @@
 
     <p>Start</p>
     <input type="text" name="start">
+
     <p>End</p>
     <input type="text" name="end">
+
+    <p>Day (Format = YYYY-MM-DD)</p>
+    <input type="text" name="date">
+
+    <select name="driverEnum">
+    <option value="Driver">Driver</option>
+    <option value="Rider">Rider</option>
+    </select>
+    
+    <select name="time">
+    <option value="Morning">Morning</option>
+    <option value="Afternoon">Afternoon</option>
+    <option value="Night">Night</option>
+    <option value="Anytime">Anytime</option>
+    </select>
+    
     <input type="submit">
 </form>
 
