--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <input type="text" name="end">
 
     <p>Day (Format = YYYY-MM-DD)</p>
-    <input type="text" name="date">
+    <input type="text" name="day">
 
     <select name="driverEnum">
     <option value="Driver">Driver</option>
